Issue #3086561 by lauriii, ckrina: Improve header spacings
(cherry picked from commit 5f496b4645cedd648314464bb33ffb189f23221f)

--- a/css/src/base/variables.css
+++ b/css/src/base/variables.css
@@ -173,4 +173,8 @@
    * Ajax progress.
    */
   --ajax-progress-margin-horizontal: var(--space-s);
+  /**
+   * Breadcrumb.
+   */
+  --breadcrumb-height: 1.25rem;
 }
