--- a/css/src/components/page-title.css
+++ b/css/src/components/page-title.css
@@ -6,13 +6,26 @@
 @import "../base/variables.css";
 
 .block-page-title-block {
+  margin-bottom: var(--space-s);
+}
+
+.block-page-title-block:last-child {
+  margin-bottom: var(--space-l);
+}
+
+/**
+ * There are use cases where page title is not rendered as a block ¯\_(ツ)_/¯.
+ *
+ * @see Drupal\system\Controller\BatchController::batchPage()
+ */
+.region-header > .page-title {
+  margin-top: var(--breadcrumb-height);
   margin-bottom: var(--space-l);
 }
 
 .page-title {
   display: inline-block;
   font-size: var(--font-size-h1);
-  line-height: var(--line-height);
   margin: 0;
   -webkit-font-smoothing: antialiased;
 }
